# docs/swagger.json
@@ -50,6 +50,37 @@
                 }
             }
         },
+        "/cl": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "List of created istekbin",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/handler.Item"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
         "/l/{uuid}": {
             "get": {
                 "consumes": [
@@ -173,6 +204,17 @@
             "properties": {
                 "message": {
                     "type": "object"
+                }
+            }
+        },
+        "handler.Item": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "key": {
+                    "type": "string"
                 }
             }
         },
