# handler/create_list_handler.go
@@ -8,6 +8,13 @@ import (
 	"net/http"
 )
 
+// List of Create Istekbin
+// @Summary List of created istekbin
+// @Produce json
+// @Success 200 {object} []handler.Item
+// @Failure 404 {object} echo.HTTPError
+// @Failure 500 {object} echo.HTTPError
+// @Router /cl [get]
 func CreateListHandler(rd *redis.Client) func(c echo.Context) error {
 	return func(c echo.Context) error {
 		key := c.RealIP()
